# orange-code

./: .gitignore  ARCHITECTURE.md  INSTALL.md  ORANGE.md  PARITY.md  README.md  citrus_constructivism_philosophy.md  debug_test.patch  generate_logo.py  generate_logo_python.py  generate_logo_transparent.py  generate_pdf.py  generate_pdf_zh.py  generate_product_pdf.py  generate_table.py  rename_orange.py  skill-memory-integration-guide.md  structural_resonance_philosophy.md  syntactic_core_logo_philosophy.md
.github/workflows/: build-desktop.yml  release.yml
build_scripts/: build_all.sh
client/: .gitignore  .npmrc  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
client/dist-electron/: main.js  preload.js
client/electron/: main.ts  preload.ts  tsconfig.json
client/src/: App.tsx  index.css
rust/: .gitignore  CONTRIBUTING.md  README.md
rust/.claw-agents/: agent-1775187572947157782.json  agent-1775187572947157782.md  agent-1775187573010251747.json  agent-1775187573010251747.md  agent-1775187656684312186.json  agent-1775187656684312186.md  agent-1775187656747762170.json  agent-1775187656747762170.md  agent-1775187702435958734.json  agent-1775187702435958734.md  agent-1775187702500577632.json  agent-1775187702500577632.md
rust/.orange-agents/: agent-1775187572947157782.json  agent-1775187572947157782.md  agent-1775187573010251747.json  (+13 more)
rust/crates/orange-cli/: Cargo.toml
rust/crates/orange-cli/src/: app.rs  args.rs  init.rs  init.rs.orig  main.rs  render.rs  server.rs
src/: __init__.py  context.py  main.py  parity_audit.py
(+51 files in other folders)
