[package]
name = "orange-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "orange"
path = "src/main.rs"

[dependencies]
api = { path = "../api" }
commands = { path = "../commands" }
compat-harness = { path = "../compat-harness" }
crossterm = "0.28"
pulldown-cmark = "0.13"
rustyline = "15"
runtime = { path = "../runtime" }
plugins = { path = "../plugins" }
serde_json.workspace = true
syntect = "5"
tokio = { version = "1", features = ["full", "rt-multi-thread", "time"] }
tools = { path = "../tools" }
warp = { version = "0.4.2", features = ["server", "websocket"] }
futures-util = "0.3.32"
uuid = { version = "1.0", features = ["v4"] }

[lints]
workspace = true
